--- a/durer/index.html
+++ b/durer/index.html
@@ -6,32 +6,113 @@
 
     <title>Dürer</title>
 
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@400;500;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://webfonts.fontstand.com/WF-000923-6e7e11e6965089bb40cd05db8c04507d.css" type="text/css"/>
 
     <style media="screen">
 
       * {
         padding: 0;
         margin: 0;
-        font-family: "Roboto Mono";
+        font-family: "ABC Social Extended Book";
+        color: #445E83;
+      }
+
+      body {
+        padding: 24px;
+        background-color: #E9F3FC;
+      }
+
+      div {
+        display: block;
+        background-color: white;
+        border-radius: 24px;
+        padding: 24px;
+        margin-top: 24px;
+      }
+
+      .number {
+        color: #F5523A;
+        display: block;
+        border-bottom: 1px solid rgba(68, 94, 131, 0.25);
+        padding-bottom: 24px;
+        margin: 72px 0 24px 0;
+        width: 100%;
+      }
+
+      div .number {
+        border: 0;
+        margin: 0;
+        padding: 0;
+      }
+
+      h1, h2, h3 {
+        font-family: "ABC Social Extended Medium";
+      }
+
+      h1, h2, h3, p {
+        margin-top: 24px;
       }
 
       @media screen and (min-width: 0px) {
+        h1 {
+
+        }
+
+        h2 {
+
+        }
+
+        h3 {
+
+        }
+
+        p {
+
+        }
 
       }
 
       @media screen and (min-width: 960px) {
+        h1 {
+          font-size: 66.77px;
+          line-height: 62.2px;
+
+        }
+
+        h2 {
+          font-size: 25.8px;
+          line-height: 38.6px;
+
+
+        }
+
+        h3 {
+
+        }
+
+        p {
+          font-size: 16px;
+          line-height: 24px;
+        }
+
+        h1, h2, h3, p, div {
+          max-width: 960px;
+        }
       }
 
     </style>
   </head>
   <body>
-    Durer
-    <p>is a place where you can create AI tools and share them with others</p>
+    <svg width="360" height="84" viewBox="0 0 360 84" fill="none" xmlns="http://www.w3.org/2000/svg">
+    <path d="M22.9164 83.9869C45.2329 83.9869 64.19 65.1498 64.19 41.9934C64.19 18.8371 45.2329 0 22.9164 0H0V83.9869H22.9164ZM21.7166 65.9897C19.6769 65.9897 17.9972 64.31 17.9972 62.2703V21.7166C17.9972 19.6769 19.6769 17.9972 21.7166 17.9972H22.1965C35.0345 17.9972 45.5929 28.7955 45.5929 41.9934C45.5929 55.1914 35.0345 65.9897 22.1965 65.9897H21.7166Z" fill="#3788F7"/>
+    <path d="M90 20.3968C95.7591 20.3968 100.198 15.7175 100.198 10.1984C100.198 4.43931 95.7591 0 90 0C84.4809 0 79.8016 4.43931 79.8016 10.1984C79.8016 15.7175 84.4809 20.3968 90 20.3968ZM118.795 20.3968C124.315 20.3968 128.994 15.7175 128.994 10.1984C128.994 4.43931 124.315 0 118.795 0C113.276 0 108.597 4.43931 108.597 10.1984C108.597 15.7175 113.276 20.3968 118.795 20.3968ZM136.793 83.9869V28.7955H118.795V52.5518C118.795 61.4304 112.676 67.7894 104.398 67.7894C95.7591 67.7894 90 61.6704 90 52.5518V28.7955H72.0028V52.1918C72.0028 71.2689 84.7208 83.9869 103.798 83.9869H136.793Z" fill="#3788F7"/>
+    <path d="M169.202 83.9869V54.7115C169.202 49.6722 172.801 46.0728 177.72 46.0728H201.837C207.236 46.0728 211.195 42.5933 211.195 37.4342C211.195 32.275 207.236 28.7955 201.837 28.7955H151.204V83.9869H169.202Z" fill="#3788F7"/>
+    <path d="M253.083 27.5957C234.366 27.5957 220.808 39.8338 220.808 55.9113C220.808 71.7488 234.006 83.9869 255.482 83.9869H280.798V68.9892H254.882C245.884 68.9892 240.605 66.8296 238.325 62.3902H285.598V56.3912C285.598 40.0737 272.04 27.5957 253.323 27.5957H253.083ZM253.323 41.3935C260.521 41.3935 265.801 44.513 268.32 49.1923H238.445C240.965 44.2731 246.364 41.3935 253.083 41.3935H253.323Z" fill="#3788F7"/>
+    <path d="M318.007 83.9869V54.7115C318.007 49.6722 321.606 46.0728 326.525 46.0728H350.641C356.041 46.0728 360 42.5933 360 37.4342C360 32.275 356.041 28.7955 350.641 28.7955H300.009V83.9869H318.007Z" fill="#3788F7"/>
+    </svg>
+    <p>is a place where you can create AI tools and share them with others</p>
 
-    <p>1</p>
+    <p class="number">1</p>
 
     <h1>Engineers</h1>
     <h2>create AI tools using machine learning models</h2>
@@ -39,27 +120,28 @@
     <p>You can try new wallpapers for your bedroom without ever leaving the house, create emojis inspired by your own selfie—or even train AI to mimic Slavoj Žižek in conversations. Every day, hundreds of AI projects are published.</p>
     <p>However, only engineers can use this tech to create AI-powered projects.</p>
 
-    <p>2</p>
-    <h1>Dürer is a platform
-    <h2>that bridges the gap between the never-ending flow of fascinating and complex AI technology for a content generation—and the immense creative potential in the hands and minds of people unfamiliar with machine learning and software engineering
-    <h2>We are building a platform for a community of enthusiasts so that they can share their creations and learn from each other.
+    <p class="number">2</p>
+    <h1>Dürer is a platform</h1>
+    <h2>that bridges the gap between the never-ending flow of fascinating and complex AI technology for a content generation—and the immense creative potential in the hands and minds of people unfamiliar with machine learning and software engineering.</h2>
+    <h2>We are building a platform for a community of enthusiasts so that they can share their creations and learn from each other.</h2>
 
-    <p>3</p>
-    <h1>We believe
-    <h2>that in the future, not only engineers will be able to train AI. We make Dürer so that anyone can create their own projects with AI algorithms
+    <p class="number">3</p>
+    <h1>We believe</h1>
+    <h2>that in the future, not only engineers will be able to train AI. We make Dürer so that anyone can create their own projects with AI algorithms</h2>
 
-    <p>4</p>
-    <h1>Join our community
-    <h2>to share, use and create your own AI tools
+    <p class="number">4</p>
+    <h1>Join our community</h1>
+    <h2>to share, use and create your own AI tools</h2>
 
     <div>
-      <p>4.1</p>
+      <p class="number">4.1</p>
       <h3>Share your project</h3>
       <p>Every day hundreds of new AI projects are published on the internet. It's difficult not to miss something new. We monitor the Internet and list all the tools and projects that you might find handy or inspiring. If you know of any that we don’t feature—or want to share yours—send it to us.</p>
     </div>
+
     <div>
-      <p>4.2
-      <h3>Train a model
+      <p class="number">4.2</p>
+      <h3>Train a model</h3>
       <p>Recent generative AI models are enormously powerful—but out of the box, they are mere toys. When you try to use them for your day-to-day tasks, you hit the wall of imperfections. It’s difficult for those models to understand your context. They can give unpredictable results just because they lacked good enough training references for your particular task. It’s easy to get a set of pictures of a brutalist housing estate, but you can hardly get that estate rendered as an embroidery pattern.</p>
       <p>To overcome these limitations, you need to be well-versed in programming or at least tech-savvy to translate your requirements into complex terms using unfriendly interfaces. If you have an idea for a project that needs AI but you struggle with coding or engineering tools—join our Discord community, and we will try to help.</p>
     </div>
