--- a/durer/index.html
+++ b/durer/index.html
@@ -55,19 +55,18 @@
 
       @media screen and (min-width: 0px) {
         h1 {
-
+          font-size: 50.1px;
+          line-height: 62.2px;
         }
 
-        h2 {
-
-        }
-
-        h3 {
-
+        h2, .number {
+          font-size: 19.3px;
+          line-height: 25.8px;
         }
 
         p {
-
+          font-size: 16px;
+          line-height: 24px;
         }
 
       }
@@ -76,18 +75,11 @@
         h1 {
           font-size: 66.77px;
           line-height: 62.2px;
-
         }
 
-        h2 {
+        h2, .number {
           font-size: 25.8px;
           line-height: 38.6px;
-
-
-        }
-
-        h3 {
-
         }
 
         p {
@@ -123,7 +115,7 @@
     <p class="number">2</p>
     <h1>Dürer is a platform</h1>
     <h2>that bridges the gap between the never-ending flow of fascinating and complex AI technology for a content generation—and the immense creative potential in the hands and minds of people unfamiliar with machine learning and software engineering.</h2>
-    <h2>We are building a platform for a community of enthusiasts so that they can share their creations and learn from each other.</h2>
+    <p>We are building a platform for a community of enthusiasts so that they can share their creations and learn from each other.</p>
 
     <p class="number">3</p>
     <h1>We believe</h1>
@@ -135,13 +127,13 @@
 
     <div>
       <p class="number">4.1</p>
-      <h3>Share your project</h3>
+      <h2>Share your project</h2>
       <p>Every day hundreds of new AI projects are published on the internet. It's difficult not to miss something new. We monitor the Internet and list all the tools and projects that you might find handy or inspiring. If you know of any that we don’t feature—or want to share yours—send it to us.</p>
     </div>
 
     <div>
       <p class="number">4.2</p>
-      <h3>Train a model</h3>
+      <h2>Train a model</h2>
       <p>Recent generative AI models are enormously powerful—but out of the box, they are mere toys. When you try to use them for your day-to-day tasks, you hit the wall of imperfections. It’s difficult for those models to understand your context. They can give unpredictable results just because they lacked good enough training references for your particular task. It’s easy to get a set of pictures of a brutalist housing estate, but you can hardly get that estate rendered as an embroidery pattern.</p>
       <p>To overcome these limitations, you need to be well-versed in programming or at least tech-savvy to translate your requirements into complex terms using unfriendly interfaces. If you have an idea for a project that needs AI but you struggle with coding or engineering tools—join our Discord community, and we will try to help.</p>
     </div>
