--- a/durer/index.html
+++ b/durer/index.html
@@ -39,6 +39,11 @@
         width: 100%;
       }
 
+      .hr {
+        border-bottom: 1px solid rgba(68, 94, 131, 0.25);
+        margin-bottom: 120px;     
+      }
+
       div .number {
         border: 0;
         margin: 0;
@@ -102,7 +107,7 @@
     <path d="M253.083 27.5957C234.366 27.5957 220.808 39.8338 220.808 55.9113C220.808 71.7488 234.006 83.9869 255.482 83.9869H280.798V68.9892H254.882C245.884 68.9892 240.605 66.8296 238.325 62.3902H285.598V56.3912C285.598 40.0737 272.04 27.5957 253.323 27.5957H253.083ZM253.323 41.3935C260.521 41.3935 265.801 44.513 268.32 49.1923H238.445C240.965 44.2731 246.364 41.3935 253.083 41.3935H253.323Z" fill="#3788F7"/>
     <path d="M318.007 83.9869V54.7115C318.007 49.6722 321.606 46.0728 326.525 46.0728H350.641C356.041 46.0728 360 42.5933 360 37.4342C360 32.275 356.041 28.7955 350.641 28.7955H300.009V83.9869H318.007Z" fill="#3788F7"/>
     </svg>
-    <p>is a place where you can create AI tools and share them with others</p>
+    <p class="hr">is a place where you can create AI tools and share them with others</p>
 
     <p class="number">1</p>
 
