--- a/durer/index.html
+++ b/durer/index.html
@@ -6,7 +6,6 @@
 
     <title>Dürer</title>
     <link rel="stylesheet" href="https://webfonts.fontstand.com/WF-000923-6e7e11e6965089bb40cd05db8c04507d.css" type="text/css"/>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 
     <style media="screen">
 
@@ -122,7 +121,7 @@
       <path d="M253.083 27.5957C234.366 27.5957 220.808 39.8338 220.808 55.9113C220.808 71.7488 234.006 83.9869 255.482 83.9869H280.798V68.9892H254.882C245.884 68.9892 240.605 66.8296 238.325 62.3902H285.598V56.3912C285.598 40.0737 272.04 27.5957 253.323 27.5957H253.083ZM253.323 41.3935C260.521 41.3935 265.801 44.513 268.32 49.1923H238.445C240.965 44.2731 246.364 41.3935 253.083 41.3935H253.323Z" fill="#3788F7"/>
       <path d="M318.007 83.9869V54.7115C318.007 49.6722 321.606 46.0728 326.525 46.0728H350.641C356.041 46.0728 360 42.5933 360 37.4342C360 32.275 356.041 28.7955 350.641 28.7955H300.009V83.9869H318.007Z" fill="#3788F7"/>
       </svg>
-      <h2>is a place where you can create AI tools and share them with others</h2>
+      <h2 class="fade">is a&nbsp;place where you can create AI tools and&nbsp;share them with&nbsp;others</h2>
     </header>
 
     <p class="number">1</p>
@@ -134,35 +133,32 @@
     <p>However, only engineers can use this tech to create AI-powered projects.</p>
 
     <p class="number">2</p>
-    <h1>Dürer is a platform</h1>
+    <h1>Dürer is a&nbsp;platform</h1>
     <h2>that bridges the gap between the never-ending flow of fascinating and complex AI technology for a content generation—and the immense creative potential in the hands and minds of people unfamiliar with machine learning and software engineering.</h2>
-    <p>We are building a platform for a community of enthusiasts so that they can share their creations and learn from each other.</p>
+    <p>We are building a platform for a community of enthusiasts so that they can share their creations and learn from each&nbsp;other.</p>
 
     <p class="number">3</p>
     <h1>We believe</h1>
-    <h2>that in the future, not only engineers will be able to train AI. We make Dürer so that anyone can create their own projects with AI algorithms</h2>
+    <h2>that in the future, not only engineers will be able to train AI. We make Dürer so that anyone can create their own projects with AI&nbsp;algorithms</h2>
 
     <p class="number">4</p>
     <h1>Join our community</h1>
-    <h2>to share, use and create your own AI tools</h2>
+    <h2>to share, use and create your own AI&nbsp;tools</h2>
 
     <div>
       <p class="number">4.1</p>
       <h2>Share your project</h2>
-      <p>Every day hundreds of new AI projects are published on the internet. It's difficult not to miss something new. We monitor the Internet and list all the tools and projects that you might find handy or inspiring. If you know of any that we don’t feature—or want to share yours—send it to us.</p>
+      <p>Every day hundreds of new AI projects are published on the internet. It's difficult not to miss something new. We monitor the Internet and list all the tools and projects that you might find handy or inspiring. If you know of any that we don’t feature—or want to share yours—send it&nbsp;to&nbsp;us.</p>
     </div>
 
     <div>
       <p class="number">4.2</p>
       <h2>Train a model</h2>
       <p>Recent generative AI models are enormously powerful—but out of the box, they are mere toys. When you try to use them for your day-to-day tasks, you hit the wall of imperfections. It’s difficult for those models to understand your context. They can give unpredictable results just because they lacked good enough training references for your particular task. It’s easy to get a set of pictures of a brutalist housing estate, but you can hardly get that estate rendered as an embroidery pattern.</p>
-      <p>To overcome these limitations, you need to be well-versed in programming or at least tech-savvy to translate your requirements into complex terms using unfriendly interfaces. If you have an idea for a project that needs AI but you struggle with coding or engineering tools—join our Discord community, and we will try to help.</p>
+      <p>To overcome these limitations, you need to be well-versed in programming or at least tech-savvy to translate your requirements into complex terms using unfriendly interfaces. If you have an idea for a project that needs AI but you struggle with coding or engineering tools—join our Discord community, and we will try&nbsp;to&nbsp;help.</p>
     </div>
 
     <footer>Durer Ai LTD · UK · 2022</footer>
 
-    <script>
-      $("p").each(function(index) {$(this).delay(400*index).fadeIn(300);});
-    </script>
   </body>
 </html>
