--- a/durer/index.html
+++ b/durer/index.html
@@ -19,6 +19,8 @@
       body {
         padding: 24px;
         background-color: #E9F3FC;
+        max-width: 960px;
+        margin: 0 auto;
       }
 
       div {
@@ -48,7 +50,7 @@
         margin-top: 120px;
       }
 
-      div .number {
+      div h2 {
         border: 0;
         margin: 0;
         padding: 0;
@@ -63,6 +65,10 @@
       }
 
       @media screen and (min-width: 0px) {
+        header h2 {
+          max-width: 480px;
+        }
+
         h1 {
           font-size: 50.1px;
           line-height: 62.2px;
@@ -101,8 +107,13 @@
           line-height: 24px;
         }
 
-        h1, h2, h3, p:not(.number), div {
+
+        h1, h2, h3, div {
           max-width: 960px;
+        }
+
+        p:not(.number) {
+          max-width: 840px;
         }
 
         .logomark {
@@ -146,13 +157,11 @@
     <h2>to share, use and create your own AI&nbsp;tools</h2>
 
     <div>
-      <p class="number">4.1</p>
       <h2>Share your project</h2>
       <p>Every day hundreds of new AI projects are published on the internet. It's difficult not to miss something new. We monitor the Internet and list all the tools and projects that you might find handy or inspiring. If you know of any that we don’t feature—or want to share yours—send it&nbsp;to&nbsp;us.</p>
     </div>
 
     <div>
-      <p class="number">4.2</p>
       <h2>Train a model</h2>
       <p>Recent generative AI models are enormously powerful—but out of the box, they are mere toys. When you try to use them for your day-to-day tasks, you hit the wall of imperfections. It’s difficult for those models to understand your context. They can give unpredictable results just because they lacked good enough training references for your particular task. It’s easy to get a set of pictures of a brutalist housing estate, but you can hardly get that estate rendered as an embroidery pattern.</p>
       <p>To overcome these limitations, you need to be well-versed in programming or at least tech-savvy to translate your requirements into complex terms using unfriendly interfaces. If you have an idea for a project that needs AI but you struggle with coding or engineering tools—join our Discord community, and we will try&nbsp;to&nbsp;help.</p>
