--- a/durer/index.html
+++ b/durer/index.html
@@ -18,9 +18,10 @@
 
       body {
         padding: 24px;
-        background-color: #E9F3FC;
+        background: linear-gradient(180deg, #FCFBFC 0%, #EBF2FC 15%, #F0F0FE 50%, #F7F2F6 100%);
         max-width: 960px;
         margin: 0 auto;
+
       }
 
       div {
