--- a/durer/index.html
+++ b/durer/index.html
@@ -111,11 +111,11 @@
         }
 
 
-        h1, h2, h3, div {
+        h1, h2, h3 {
           max-width: 960px;
         }
 
-        p:not(.number) {
+        p:not(.number), div {
           max-width: 840px;
         }
 
