--- a/durer/index.html
+++ b/durer/index.html
@@ -63,8 +63,12 @@
         font-family: "ABC Social Extended Medium";
       }
 
-      h1, h2, h3, p {
+      h1, h3, p {
         margin-top: 24px;
+      }
+
+      h2 {
+        margin-top: 8px;
       }
 
       @media screen and (min-width: 0px) {
