--- a/durer/index.html
+++ b/durer/index.html
@@ -26,6 +26,53 @@
 
       }
 
+      header {
+        border-bottom: 1px solid rgba(68, 94, 131, 0.25);
+        margin-bottom: 240px;
+        padding-bottom: 24px;
+      }
+
+      menu {
+        display: block;
+        padding: 0px 48px;
+        gap: 4px;
+
+        position: fixed;
+        width: 960px;
+        height: 56px;
+        margin-left: -48px;
+        top: 24px;
+
+        background-color: white;
+        border-radius: 72px;
+        transition: opacity 0.3s ease;
+
+        opacity: 0;
+      }
+
+      .visible {
+        opacity: 1;
+      }
+
+      menu svg {
+        margin-top: 16px;
+      }
+
+      menu nav {
+        display: block;
+        position: absolute;
+        font-size: 16px;
+        line-height: 24px;
+        right: 48px;
+        top: 16px;
+      }
+
+      menu nav a {
+        display: inline-block;
+        margin-left: 8px;
+      }
+
+
       div {
         display: block;
         background-color: white;
@@ -43,11 +90,7 @@
         width: 100% !important;
       }
 
-      header {
-        border-bottom: 1px solid rgba(68, 94, 131, 0.25);
-        margin-bottom: 240px;
-        padding-bottom: 24px;
-      }
+
 
       footer {
         margin-top: 120px;
@@ -72,6 +115,10 @@
       }
 
       @media screen and (min-width: 0px) {
+        menu {
+          display: none;
+        }
+
         header h2 {
           max-width: 480px;
         }
@@ -99,6 +146,10 @@
       }
 
       @media screen and (min-width: 960px) {
+        menu {
+          display: block;
+        }
+
         h1 {
           font-size: 66.77px;
           line-height: 62.2px;
@@ -142,6 +193,19 @@
       <h2 class="fade">is a&nbsp;place where you can create AI&nbsp;tools and&nbsp;share them with&nbsp;others</h2>
     </header>
 
+    <menu>
+        <svg width="86" height="20" viewBox="0 0 86 20" fill="none" xmlns="http://www.w3.org/2000/svg">
+        <path d="M5.45714 20C10.7714 20 15.2857 15.5143 15.2857 10C15.2857 4.48571 10.7714 0 5.45714 0H0V20H5.45714ZM5.17143 15.7143C4.68571 15.7143 4.28571 15.3143 4.28571 14.8286V5.17143C4.28571 4.68571 4.68571 4.28572 5.17143 4.28572H5.28571C8.34286 4.28572 10.8571 6.85714 10.8571 10C10.8571 13.1429 8.34286 15.7143 5.28571 15.7143H5.17143Z" fill="#3788F7"/>
+        <path d="M21.4319 4.85714C22.8033 4.85714 23.8605 3.74286 23.8605 2.42857C23.8605 1.05714 22.8033 0 21.4319 0C20.1176 0 19.0033 1.05714 19.0033 2.42857C19.0033 3.74286 20.1176 4.85714 21.4319 4.85714ZM28.2891 4.85714C29.6033 4.85714 30.7176 3.74286 30.7176 2.42857C30.7176 1.05714 29.6033 0 28.2891 0C26.9748 0 25.8605 1.05714 25.8605 2.42857C25.8605 3.74286 26.9748 4.85714 28.2891 4.85714ZM32.5748 20V6.85714H28.2891V12.5143C28.2891 14.6286 26.8319 16.1429 24.8605 16.1429C22.8033 16.1429 21.4319 14.6857 21.4319 12.5143V6.85714H17.1462V12.4286C17.1462 16.9714 20.1748 20 24.7176 20H32.5748Z" fill="#3788F7"/>
+        <path d="M40.2924 20V13.0286C40.2924 11.8286 41.1496 10.9714 42.321 10.9714H48.0638C49.3496 10.9714 50.2924 10.1429 50.2924 8.91429C50.2924 7.68571 49.3496 6.85714 48.0638 6.85714H36.0067V20H40.2924Z" fill="#3788F7"/>
+        <path d="M60.2672 6.57143C55.81 6.57143 52.5815 9.48571 52.5815 13.3143C52.5815 17.0857 55.7243 20 60.8386 20H66.8672V16.4286H60.6958C58.5529 16.4286 57.2958 15.9143 56.7529 14.8571H68.01V13.4286C68.01 9.54286 64.7815 6.57143 60.3243 6.57143H60.2672ZM60.3243 9.85714C62.0386 9.85714 63.2958 10.6 63.8958 11.7143H56.7815C57.3815 10.5429 58.6672 9.85714 60.2672 9.85714H60.3243Z" fill="#3788F7"/>
+        <path d="M75.7277 20V13.0286C75.7277 11.8286 76.5848 10.9714 77.7562 10.9714H83.4991C84.7848 10.9714 85.7277 10.1429 85.7277 8.91429C85.7277 7.68571 84.7848 6.85714 83.4991 6.85714H71.442V20H75.7277Z" fill="#3788F7"/>
+        </svg>
+        <nav>
+          Join our community <a href="#">Discord</a> <a href="#">Twitter</a>
+        </nav>
+    </menu>
+
     <p class="number">1</p>
 
     <h1>Engineers</h1>
@@ -177,7 +241,17 @@
 
     <footer>Durer Ai LTD · UK · 2022</footer>
     <script>
-
+    $(document).ready(function(){
+      $(window).bind('scroll', function() {
+        var distance = 120;
+        if ($(window).scrollTop() > distance) {
+          $('menu').addClass('visible');
+        }
+        else {
+          $('menu').removeClass('visible');
+        }
+      });
+    });
     </script>
 
   </body>
