--- a/durer/index.html
+++ b/durer/index.html
@@ -72,6 +72,10 @@
         margin-left: 8px;
       }
 
+      menu nav a:hover {
+        color: #F5523A;
+      }
+
 
       div {
         display: block;
