--- a/durer/index.html
+++ b/durer/index.html
@@ -72,9 +72,10 @@
         margin-left: 8px;
       }
 
-      menu nav a:hover {
-        color: #F5523A;
+      a:hover {
+        color: #3788F7;
       }
+
 
 
       div {
