--- a/durer/index.html
+++ b/durer/index.html
@@ -34,20 +34,20 @@
 
       menu {
         display: block;
+        opacity: 0;
+        transition: opacity 0.15s ease;
+        background-color: white;
+        position: fixed;
+
         padding: 0px 48px;
         gap: 4px;
 
-        position: fixed;
         width: 960px;
         height: 56px;
         margin-left: -48px;
         top: 24px;
 
-        background-color: white;
         border-radius: 72px;
-        transition: opacity 0.15s ease;
-
-        opacity: 0;
       }
 
       .visible {
@@ -130,7 +130,7 @@
 
         h1 {
           font-size: 50.1px;
-          line-height: 62.2px;
+          line-height: 50.1px;
         }
 
         h2, .number {
@@ -156,8 +156,8 @@
         }
 
         h1 {
-          font-size: 66.77px;
-          line-height: 62.2px;
+          font-size: 66.8px;
+          line-height: 66.8px;
         }
 
         h2, .number {
@@ -213,15 +213,15 @@
 
     <p class="number">1</p>
 
-    <h1>Engineers</h1>
-    <h2>create AI tools using machine learning models</h2>
+    <h1>AI tools</h1>
+    <h2>created by engineers using machine learning models</h2>
     <p>They train these models and tune them to perform a range of tasks, starting with mere help in content editing and reaching all the way to the generation of creative content using a request in plain English language or even a photo reference.</p>
     <p>You can try new wallpapers for your bedroom without ever leaving the house, create emojis inspired by your own selfie—or even train AI to mimic Slavoj Žižek in conversations. Every day, hundreds of AI projects are published.</p>
     <p>However, only engineers can use this tech to create AI-powered projects.</p>
 
     <p class="number">2</p>
-    <h1>Dürer is a&nbsp;platform</h1>
-    <h2>that bridges the gap between the never-ending flow of fascinating and complex AI technology for a content generation—and the immense creative potential in the hands and minds of people unfamiliar with machine learning and software engineering.</h2>
+    <h1>Dürer bridges the gap</h1>
+    <h2>as a&nbsp;platform between the never-ending flow of fascinating and complex AI technology for a content generation—and the immense creative potential in the hands and minds of people unfamiliar with machine learning and software engineering.</h2>
     <p>We are building a platform for a community of enthusiasts so that they can share their creations and learn from each&nbsp;other.</p>
 
     <p class="number">3</p>
@@ -235,13 +235,14 @@
 
     <div>
       <h2>Share your project</h2>
-      <p>Every day hundreds of new AI projects are published on the internet. It's difficult not to miss something new. We monitor the Internet and list all the tools and projects that you might find handy or inspiring. If you know of any that we don’t feature—or want to share yours—send it&nbsp;to&nbsp;us.</p>
+      <p>Every day hundreds of new AI projects are published on the internet. It's difficult not to miss something new. We monitor the Internet and list all the tools and projects that you might find handy or inspiring.</p>
+      <p>If you know of any that we don’t feature—or want to share yours—<a href="#">send it&nbsp;to&nbsp;us.</a></p>
     </div>
 
     <div>
       <h2>Train a model</h2>
       <p>Recent generative AI models are enormously powerful—but out of the box, they are mere toys. When you try to use them for your day-to-day tasks, you hit the wall of imperfections. It’s difficult for those models to understand your context. They can give unpredictable results just because they lacked good enough training references for your particular task. It’s easy to get a set of pictures of a brutalist housing estate, but you can hardly get that estate rendered as an embroidery pattern.</p>
-      <p>To overcome these limitations, you need to be well-versed in programming or at least tech-savvy to translate your requirements into complex terms using unfriendly interfaces. If you have an idea for a project that needs AI but you struggle with coding or engineering tools—join our Discord community, and we will try&nbsp;to&nbsp;help.</p>
+      <p>To overcome these limitations, you need to be well-versed in programming or at least tech-savvy to translate your requirements into complex terms using unfriendly interfaces. If you have an idea for a project that needs AI but you struggle with coding or engineering tools—<a href="#">join our Discord</a> community, and we will try&nbsp;to&nbsp;help.</p>
     </div>
 
     <footer>Durer Ai LTD · UK · 2022</footer>
