--- a/durer/index.html
+++ b/durer/index.html
@@ -76,8 +76,6 @@
         color: #3788F7;
       }
 
-
-
       div {
         display: block;
         background-color: white;
@@ -94,8 +92,6 @@
         margin: 240px 0 24px 0;
         width: 100% !important;
       }
-
-
 
       footer {
         margin-top: 120px;
@@ -195,7 +191,7 @@
       <path d="M253.083 27.5957C234.366 27.5957 220.808 39.8338 220.808 55.9113C220.808 71.7488 234.006 83.9869 255.482 83.9869H280.798V68.9892H254.882C245.884 68.9892 240.605 66.8296 238.325 62.3902H285.598V56.3912C285.598 40.0737 272.04 27.5957 253.323 27.5957H253.083ZM253.323 41.3935C260.521 41.3935 265.801 44.513 268.32 49.1923H238.445C240.965 44.2731 246.364 41.3935 253.083 41.3935H253.323Z" fill="#3788F7"/>
       <path d="M318.007 83.9869V54.7115C318.007 49.6722 321.606 46.0728 326.525 46.0728H350.641C356.041 46.0728 360 42.5933 360 37.4342C360 32.275 356.041 28.7955 350.641 28.7955H300.009V83.9869H318.007Z" fill="#3788F7"/>
       </svg>
-      <h2 class="fade">is a&nbsp;place where you can create AI&nbsp;tools and&nbsp;share them with&nbsp;others</h2>
+      <h2>is a&nbsp;place where you can create AI&nbsp;tools and&nbsp;share them with&nbsp;others</h2>
     </header>
 
     <menu>
@@ -215,13 +211,13 @@
 
     <h1>AI tools</h1>
     <h2>created by engineers using machine learning models</h2>
-    <p>They train these models and tune them to perform a range of tasks, starting with mere help in content editing and reaching all the way to the generation of creative content using a request in plain English language or even a photo reference.</p>
+    <p>Engineers train these models and tune them to perform a range of tasks, starting with mere help in content editing and reaching all the way to the generation of creative content using a request in plain English language or even a photo reference.</p>
     <p>You can try new wallpapers for your bedroom without ever leaving the house, create emojis inspired by your own selfie—or even train AI to mimic Slavoj Žižek in conversations. Every day, hundreds of AI projects are published.</p>
     <p>However, only engineers can use this tech to create AI-powered projects.</p>
 
     <p class="number">2</p>
     <h1>Dürer bridges the gap</h1>
-    <h2>as a&nbsp;platform between the never-ending flow of fascinating and complex AI technology for a content generation—and the immense creative potential in the hands and minds of people unfamiliar with machine learning and software engineering.</h2>
+    <h2>as a&nbsp;platform between the never-ending flow of fascinating and complex AI&nbsp;technology for a&nbsp;content generation—and the immense creative potential in the hands and minds of people unfamiliar with machine learning and software engineering.</h2>
     <p>We are building a platform for a community of enthusiasts so that they can share their creations and learn from each&nbsp;other.</p>
 
     <p class="number">3</p>
@@ -245,7 +241,7 @@
       <p>To overcome these limitations, you need to be well-versed in programming or at least tech-savvy to translate your requirements into complex terms using unfriendly interfaces. If you have an idea for a project that needs AI but you struggle with coding or engineering tools—<a href="#">join our Discord</a> community, and we will try&nbsp;to&nbsp;help.</p>
     </div>
 
-    <footer>Durer Ai LTD · UK · 2022</footer>
+    <footer>&copy; Durer Ai LTD · UK · 2022</footer>
     <script>
     $(document).ready(function(){
       $(window).bind('scroll', function() {
