--- a/durer/index.html
+++ b/durer/index.html
@@ -222,7 +222,7 @@
 
     <p class="number">3</p>
     <h1>We believe</h1>
-    <h2>that in the future, not only engineers will be able to train AI.</h2>
+    <h2>that in the future, not only engineers will be able to train AI</h2>
     <p>We make Dürer so that anyone can create their own projects with AI&nbsp;algorithms</p>
 
     <p class="number">4</p>
