--- a/durer/index.html
+++ b/durer/index.html
@@ -217,7 +217,7 @@
 
     <p class="number">2</p>
     <h1>Dürer bridges the gap</h1>
-    <h2>as a&nbsp;platform between the never-ending flow of fascinating and complex AI&nbsp;technology for a&nbsp;content generation—and the immense creative potential in the hands and minds of people unfamiliar with machine learning and software engineering.</h2>
+    <h2>as a&nbsp;platform between the never-ending flow of fascinating and complex AI&nbsp;technology for a&nbsp;content generation—and the immense creative potential in the hands and minds of people unfamiliar with machine learning and software engineering</h2>
     <p>We are building a platform for a community of enthusiasts so that they can share their creations and learn from each&nbsp;other.</p>
 
     <p class="number">3</p>
