--- a/durer/index.html
+++ b/durer/index.html
@@ -39,10 +39,8 @@
         background-color: white;
         position: fixed;
 
-        padding: 0px 48px;
         gap: 4px;
 
-        width: 960px;
         height: 56px;
         margin-left: -48px;
         top: 24px;
@@ -177,8 +175,11 @@
 
       @media screen and (min-width: 960px) {
         menu {
-          display: block;
-        }
+          top: 24px;
+          width: 960px;
+          margin: auto;
+          padding: 0px 48px;
+      }
 
         .mobile {
           display: none;
