--- a/durer/index.html
+++ b/durer/index.html
@@ -32,6 +32,10 @@
         padding-bottom: 24px;
       }
 
+      header svg {
+        margin-bottom: 12px;
+      }
+
       menu {
         display: block;
         opacity: 0;
@@ -107,10 +111,6 @@
 
       h1, h3, p {
         margin-top: 24px;
-      }
-
-      h2 {
-        margin-top: 8px;
       }
 
       @media screen and (min-width: 0px) {
