--- a/durer/index.html
+++ b/durer/index.html
@@ -32,10 +32,6 @@
         padding-bottom: 24px;
       }
 
-      header svg {
-        margin-bottom: 12px;
-      }
-
       menu {
         display: block;
         opacity: 0;
@@ -84,6 +80,10 @@
         border-radius: 24px;
         padding: 24px;
         margin-top: 24px;
+      }
+
+      h2 {
+        margin-top: 12px;
       }
 
       .number {
