--- a/durer/index.html
+++ b/durer/index.html
@@ -199,6 +199,10 @@
           line-height: 38.6px;
         }
 
+        header h2 {
+          max-width: 560px;
+        }
+
         p {
           font-size: 16px;
           line-height: 24px;
