--- a/durer/index.html
+++ b/durer/index.html
@@ -284,6 +284,10 @@
     <div>
       <h2>Train a model</h2>
       <p>Recent generative AI models are enormously powerful—but out of the box, they are mere toys. When you try to use them for your day-to-day tasks, you hit the wall of imperfections. It’s difficult for those models to understand your context. They can give unpredictable results just because they lacked good enough training references for your particular task. It’s easy to get a set of pictures of a brutalist housing estate, but you can hardly get that estate rendered as an embroidery pattern.</p>
+    </div>
+
+    <div>
+      <h2>Send your idea</h2>
       <p>To overcome these limitations, you need to be well-versed in programming or at least tech-savvy to translate your requirements into complex terms using unfriendly interfaces. If you have an idea for a project that needs AI but you struggle with coding or engineering tools—<a href="https://discord.gg/H3pkyyuk">join our Discord</a> community, and we will try&nbsp;to&nbsp;help.</p>
     </div>
 
