--- a/durer/index.html
+++ b/durer/index.html
@@ -94,6 +94,10 @@
         width: 100% !important;
       }
 
+      .spacer {
+        margin-top: 120px;
+      }
+
       footer {
         margin-top: 120px;
       }
@@ -110,6 +114,14 @@
 
       h1, h3, p {
         margin-top: 24px;
+      }
+
+      .button {
+        display: block;
+        padding: 8px 24px;
+        background-color: #445E83;
+        color: white;
+        border-radius: 24px;
       }
 
       @media screen and (min-width: 0px) {
@@ -271,23 +283,26 @@
     <h2>that in the future, not only engineers will be able to train AI</h2>
     <p>We make Dürer so that anyone can create their own projects with AI&nbsp;algorithms</p>
 
-    <h1>Join our community</h1>
+    <h1 class="spacer">Join our community</h1>
     <h2>to share, use and create your own AI&nbsp;tools</h2>
 
     <div>
       <h2>Share your project</h2>
       <p>Every day hundreds of new AI projects are published on the internet. It's difficult not to miss something new. We monitor the Internet and list all the tools and projects that you might find handy or inspiring.</p>
       <p>If you know of any that we don’t feature—or want to share yours—<a href="mailto:tonia@durer.ai">send it&nbsp;to&nbsp;us.</a></p>
+      <a href="#" class="button">CTA</a>
     </div>
 
     <div>
       <h2>Train a model</h2>
       <p>Recent generative AI models are enormously powerful—but out of the box, they are mere toys. When you try to use them for your day-to-day tasks, you hit the wall of imperfections. It’s difficult for those models to understand your context. They can give unpredictable results just because they lacked good enough training references for your particular task. It’s easy to get a set of pictures of a brutalist housing estate, but you can hardly get that estate rendered as an embroidery pattern.</p>
+      <a href="#" class="button">CTA</a>
     </div>
 
     <div>
-      <h2>Send your idea</h2>
+      <h2>Join community</h2>
       <p>To overcome these limitations, you need to be well-versed in programming or at least tech-savvy to translate your requirements into complex terms using unfriendly interfaces. If you have an idea for a project that needs AI but you struggle with coding or engineering tools—<a href="https://discord.gg/H3pkyyuk">join our Discord</a> community, and we will try&nbsp;to&nbsp;help.</p>
+      <a href="#" class="button">CTA</a>
     </div>
 
     <footer>&copy; Durer Ai LTD · UK · 2022</footer>
